Mobile Alignment Fix

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ section h2 {
 
 section div {
     display: inline-block;
-    width:30%
+    width:35%
 }
 
 section p {
